<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/allergicList"
android:orientation="vertical"
android:padding="5dp">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    android:id="@+id/cardViewAllergicMedicine">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/edit_text_style">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:id="@+id/checkIconAllergic"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/medicineAllergic"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="Medicine"
                android:textColor="@color/colorWarning"
                android:paddingLeft="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample createdAt"
            android:id="@+id/descriptionAllergic"
            android:paddingLeft="10dp"/>

    </LinearLayout>
</android.support.v7.widget.CardView>

</LinearLayout>
