<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sahanruwanga.medcarer.activity.LoginActivity"
    android:background="@color/colorWhite">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo"
                android:id="@+id/logoImage"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/logoImage"
                android:background="@drawable/edit_text_style"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/colorHintText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/colorHintText" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                android:onClick="doLogin"
                android:text="@string/button_login" />

            <TextView
                android:id="@+id/lable1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/show_register"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lable1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:onClick="openRegisterActivity"
                android:text="@string/navigate_register"
                android:textColor="@color/colorLink"
                android:textSize="16sp"
                android:textStyle="italic" />
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>

