<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sahanruwanga.medcarer.activity.UpdateAllergicMedicineActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbarUpdateAllergicMedicine"
        android:background="@color/colorBackground">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backIconUpdateAllergicMedicine"
                android:src="@drawable/ic_action_navigation_arrow_back"
                android:layout_gravity="center_vertical|left"
                android:onClick="backIconClickUpdateAllergicMedicine"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update Allergic Medicine"
                android:id="@+id/toolBarText"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_horizontal|center_vertical"/>
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarUpdateAllergicMedicine">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="12"
                android:background="@drawable/edit_text_style">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Medicine"
                    android:textSize="16sp"
                    android:gravity="center_vertical|left"
                    android:padding="10dp"
                    android:textAlignment="gravity"/>

                <AutoCompleteTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/updateAllergicMedicine"
                    android:layout_weight="11.9"
                    android:background="@drawable/edit_text_design"
                    android:textAlignment="gravity"
                    android:padding="5dp"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center_vertical|left"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1">

                </AutoCompleteTextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@drawable/edit_text_style">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Notes"
                    android:textSize="16sp"
                    android:gravity="center_vertical|left"
                    android:padding="10dp"
                    android:textAlignment="gravity"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/updateAllergicMedicineNote"
                    android:textAlignment="gravity"
                    android:padding="5dp"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center_vertical|left"
                    android:inputType="text|textMultiLine"
                    android:background="@drawable/edit_text_design_emptybackground"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateAllergicMedicineUpdate"
                android:text="UPDATE"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cancelUpdateAllergicMedicine"
                android:text="CANCEL"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/colorWarning"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
